<resources>
    <string name="app_name">GreenHavenNursury</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcom_back">Welcom\nback</string>
    <string name="password">Password</string>
    <string name="email_or_user_name">Email or User Name</string>
    <string name="fogot_password">Fogot Password</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_t_have_an_account">Dont\'t Have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_uptitle">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="user_name">User Name</string>
    <string name="signup_password">Password</string>
    <string name="already_have_an_account">already Have an account</string>
    <string name="Signup_Nav_sign_in">Sign in</string>
    <string name="sign_upbtn">Sign Up</string>
    <string name="get_started">Get Started</string>
</resources>